New Scroll & Zoom + Bugs fix + Java 13
La page ne scroll plus quand vous zoomez et le zoom est maintenant centré sur la page : vous ne dérivez plus en zoomant.

Quelques bugs notament lors de l'ajout d'éléments et lors de l'exportation ont étés réglés.

Quelques modifications du build.gradle ont étés faites en vue de la préparation de la version 1.0. Le projet est passé sous la version SE 13 de Java.